--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,5 +1,9 @@
 FROM adoptopenjdk/openjdk8-openj9:alpine-slim
 VOLUME /tmp
-ADD jenkinsci-0.0.1-SNAPSHOT.jar /jenkinsci-0.0.1-SNAPSHOT.jar
+RUN mkdir app
+RUN mkdir -p /app/config
 
-ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/jenkinsci-0.0.1-SNAPSHOT.jar"]
+ADD jenkinsci-0.0.1-SNAPSHOT.jar /app/jenkinsci-0.0.1-SNAPSHOT.jar
+COPY config/* /app/config/
+
+ENTRYPOINT ["java","-Djava.security.egd=file:/dev/./urandom","-jar","/app/jenkinsci-0.0.1-SNAPSHOT.jar"]
