--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
 
     <dependencies>
 
-        <dependency>
+       <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
@@ -43,6 +43,41 @@
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-aop</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-pool2</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>1.0.11</version>
+        </dependency>
+
+        <!--mybatis -->
+        <dependency>
+            <groupId>org.mybatis.spring.boot</groupId>
+            <artifactId>mybatis-spring-boot-starter</artifactId>
+            <version>1.3.0</version>
+        </dependency>
+        <!--mapper -->
+        <dependency>
+            <groupId>tk.mybatis</groupId>
+            <artifactId>mapper-spring-boot-starter</artifactId>
+            <version>2.0.4</version>
+        </dependency>
+        <!--pagehelper -->
+        <dependency>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper-spring-boot-starter</artifactId>
+            <version>1.2.9</version>
         </dependency>
 
         <dependency>
@@ -67,12 +102,6 @@
                 <version>2.4</version>
                 <classifier>jdk15</classifier>
         </dependency>
-
-<!--         <dependency> -->
-<!--             <groupId>cn.com.thinkit.cloud</groupId> -->
-<!--             <artifactId>microservice-common-util</artifactId> -->
-<!--             <version>${microservice-common-util.version}</version> -->
-<!--         </dependency> -->
 
         <dependency>
             <groupId>io.jsonwebtoken</groupId>
@@ -102,6 +131,12 @@
                <groupId>org.freemarker</groupId>
                <artifactId>freemarker</artifactId>
            </dependency>
+           
+           <dependency>
+            <groupId>cn.com.thinkit.cloud</groupId>
+            <artifactId>microservice-common-util</artifactId>
+            <version>${microservice-common-util.version}</version>
+        </dependency>
 
     </dependencies>
 
