--- a/pom.xml
+++ b/pom.xml
@@ -151,7 +151,7 @@
 
     <profiles>
         <profile>
-            <id>jar-with-dependencies</id>
+            <id>profile1</id>
             <build>
                 <plugins>
                     <plugin>
