--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,10 +3,10 @@ spring.application.name=jenkinsci
 
 #mysql database config
 #spring.datasource.url=jdbc:mysql:${MYSQL_HOST://127.0.0.1}:${MYSQL_PORT:3306}/UPM?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:127.0.0.1}:${MYSQL_PORT:3306}/jenkins_ci?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
+spring.datasource.url=jdbc:mysql://192.168.96.89:${MYSQL_PORT:3306}/jenkins_ci?useUnicode=true&characterEncoding=UTF-8&characterSetResults=UTF-8&zeroDateTimeBehavior=convertToNull&useSSL=false
 spring.datasource.username=root
 # root
-spring.datasource.password=123456
+spring.datasource.password=Thinkit@2018
 
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.initialSize=1
