--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -69,3 +69,12 @@ server.compression.mime-types=text/javascript,application/javascript,text/css
 jenkins_url=http://192.168.96.89:7480/jenkins
 jenkins_username=admin
 jenkins_password=123456
+
+#日志配置文件
+#logging.config=classpath:logback-spring.xml
+#日志路径，级别配置
+log.path=../logs
+# 配置日志级别，  DEBUG INFO WARN ERROR
+log.level=debug
+#日志前缀
+log.prefix=jenkinsci
